--- a/backend/backend-spring/src/main/resources/application.properties
+++ b/backend/backend-spring/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=D0nation$AppLES
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.liquibase.change-log=classpath:db/changelog/master.sql
