Change in config yaml

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -16,10 +16,10 @@ jobs:
           cache: maven
 
       - name: Build
-        run: mvn -f /backend/backend-spring/pom.xml --batch-mode -DskipTests package
+        run: mvn -f ./backend/backend-spring/pom.xml --batch-mode -DskipTests package
 
       - name: Test
-        run: mvn -f /backend/backend-spring/pom.xml --batch-mode -Dmaven.test.failure.ignore=true test
+        run: mvn -f ./backend/backend-spring/pom.xml --batch-mode -Dmaven.test.failure.ignore=true test
 
       - name: Report
         uses: dorny/test-reporter@v1
