--- a/backend/backend-spring/pom.xml
+++ b/backend/backend-spring/pom.xml
@@ -68,4 +68,14 @@
 		<finalName>backend-spring</finalName>
 	</build>
 
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M7</version>
+			</plugin>
+		</plugins>
+	</reporting>
+
 </project>
