Post method to the backend v2
Add category with a code. Post request. When the post finish the app stays on the add page and don't go to the api page like the older approach.

--- a/frontend/donations-spa/tsconfig.json
+++ b/frontend/donations-spa/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/form.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/form.js", "pages/admin/add_category_ex.js"],
   "exclude": ["node_modules"]
 }
