--- a/frontend/donations-spa/package.json
+++ b/frontend/donations-spa/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
