--- a/frontend/donations-spa/package.json
+++ b/frontend/donations-spa/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
+    "axios": "^1.1.3",
     "next": "12.3.1",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
-    "axios": "^1.1.3"
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
