--- a/backend/backend-spring/src/main/resources/application.properties
+++ b/backend/backend-spring/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.liquibase.change-log=classpath:db/changelog/master.sql
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
