--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -5,7 +5,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 8
@@ -15,7 +14,10 @@ jobs:
           distribution: "adopt"
           cache: maven
 
-      - name: Build
+      - name: Install
+        run: mvn -f ./backend/backend-spring/pom.xml --batch-mode -DskipTests install
+
+      - name: Package
         run: mvn -f ./backend/backend-spring/pom.xml --batch-mode -DskipTests package
 
       - name: Test
@@ -33,25 +35,25 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   docker:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Build image docker backend-spring
         uses: actions/checkout@v3
-      
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./Dockerfile
+          file: ./backend/backend-spring/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/backend-spring:latest
