--- a/frontend/donations-spa/package.json
+++ b/frontend/donations-spa/package.json
@@ -12,12 +12,14 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
+    "firebase": "^9.14.0",
     "next": "12.3.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.1"
   },
   "devDependencies": {
