--- a/frontend/donations-spa/tsconfig.json
+++ b/frontend/donations-spa/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/form.js", "pages/admin/add_category_ex.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/form.js", "pages/admin/add_category_ex.js", "context/state.js", "context/SessionContext.js"],
   "exclude": ["node_modules"]
 }
